--- a/Fragments/app/src/main/res/layout/fragment_home.xml
+++ b/Fragments/app/src/main/res/layout/fragment_home.xml
@@ -45,6 +45,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tabLayoutHome" />
+        app:layout_constraintTop_toBottomOf="@+id/homeFragmentManager" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
