material colors added and ic_app vectorized

--- a/Fragments/app/src/main/res/layout/activity_login_sign_up.xml
+++ b/Fragments/app/src/main/res/layout/activity_login_sign_up.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="@color/background_app"
+    android:backgroundTint="@color/md_theme_light_onTertiaryContainer"
     tools:context=".Login_SignUP">
 
     <Button
         android:id="@+id/buttonSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/button_signUp"
+        android:backgroundTint="@color/md_theme_light_tertiary"
         android:text="Registrarse"
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +23,7 @@
         android:id="@+id/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/button_login"
+        android:backgroundTint="@color/md_theme_dark_tertiary"
         android:text="Iniciar sesión"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
