--- a/Fragments/app/src/main/res/values/colors.xml
+++ b/Fragments/app/src/main/res/values/colors.xml
@@ -1,12 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="blue">#6495ed</color>
-    <color name="background_app">#FEFCFB</color>
-    <color name="button_login">#1282A2</color>
-    <color name="button_signUp">#034078</color>
-
-
-
+    <color name="seed">#bcf5ee</color>
+    <color name="md_theme_light_primary">#006A64</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#71F7EC</color>
+    <color name="md_theme_light_onPrimaryContainer">#00201E</color>
+    <color name="md_theme_light_secondary">#006A64</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#71F7EB</color>
+    <color name="md_theme_light_onSecondaryContainer">#00201E</color>
+    <color name="md_theme_light_tertiary">#3757BB</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#DCE1FF</color>
+    <color name="md_theme_light_onTertiaryContainer">#00164F</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FEFBFF</color>
+    <color name="md_theme_light_onBackground">#001849</color>
+    <color name="md_theme_light_surface">#FEFBFF</color>
+    <color name="md_theme_light_onSurface">#001849</color>
+    <color name="md_theme_light_surfaceVariant">#DAE5E2</color>
+    <color name="md_theme_light_onSurfaceVariant">#3F4947</color>
+    <color name="md_theme_light_outline">#6F7977</color>
+    <color name="md_theme_light_inverseOnSurface">#EEF0FF</color>
+    <color name="md_theme_light_inverseSurface">#002B75</color>
+    <color name="md_theme_light_inversePrimary">#50DBCF</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#006A64</color>
+    <color name="md_theme_light_outlineVariant">#BEC9C6</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_dark_primary">#50DBCF</color>
+    <color name="md_theme_dark_onPrimary">#003733</color>
+    <color name="md_theme_dark_primaryContainer">#00504B</color>
+    <color name="md_theme_dark_onPrimaryContainer">#71F7EC</color>
+    <color name="md_theme_dark_secondary">#50DBCF</color>
+    <color name="md_theme_dark_onSecondary">#003733</color>
+    <color name="md_theme_dark_secondaryContainer">#00504B</color>
+    <color name="md_theme_dark_onSecondaryContainer">#71F7EB</color>
+    <color name="md_theme_dark_tertiary">#5aa9e6</color>
+    <color name="md_theme_dark_onTertiary">#00277E</color>
+    <color name="md_theme_dark_tertiaryContainer">#183EA2</color>
+    <color name="md_theme_dark_onTertiaryContainer">#DCE1FF</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#001849</color>
+    <color name="md_theme_dark_onBackground">#DBE1FF</color>
+    <color name="md_theme_dark_surface">#001849</color>
+    <color name="md_theme_dark_onSurface">#DBE1FF</color>
+    <color name="md_theme_dark_surfaceVariant">#3F4947</color>
+    <color name="md_theme_dark_onSurfaceVariant">#BEC9C6</color>
+    <color name="md_theme_dark_outline">#899391</color>
+    <color name="md_theme_dark_inverseOnSurface">#001849</color>
+    <color name="md_theme_dark_inverseSurface">#DBE1FF</color>
+    <color name="md_theme_dark_inversePrimary">#006A64</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#50DBCF</color>
+    <color name="md_theme_dark_outlineVariant">#3F4947</color>
+    <color name="md_theme_dark_scrim">#000000</color>
 </resources>
