--- a/Fragments/app/src/main/res/layout/activity_main.xml
+++ b/Fragments/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/md_theme_light_tertiaryContainer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
             android:id="@+id/home_fr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:icon="@drawable/casa" />
+            android:icon="@drawable/home" />
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/publish_fr"
