(added) filder Register and classes Register

--- a/Fragments/app/src/main/res/layout/activity_login_sign_up.xml
+++ b/Fragments/app/src/main/res/layout/activity_login_sign_up.xml
@@ -107,4 +107,12 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.18004866" />
 
+    <FrameLayout
+        android:id="@+id/RegisterFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
