--- a/Fragments/app/src/main/res/layout/activity_main.xml
+++ b/Fragments/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:id="@+id/home_fr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:icon="@drawable/home" />
+            android:icon="@drawable/casa" />
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/publish_fr"
