(added) design for the Publish fragment

--- a/Fragments/app/src/main/res/layout/fragment_mis_temas.xml
+++ b/Fragments/app/src/main/res/layout/fragment_mis_temas.xml
@@ -6,6 +6,12 @@
     tools:context=".HomeFragments.MisTemas">
 
     <!-- TODO: Update blank fragment layout -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
