--- a/Fragments/app/src/main/res/layout/activity_select_topic.xml
+++ b/Fragments/app/src/main/res/layout/activity_select_topic.xml
@@ -6,4 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".Registro.SelectTopic">
 
+    <ScrollView
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_app">
+            </ImageView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Selecciona los tamas que le gusta"
+                android:layout_gravity="center">
+            </TextView>
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chipGroupThemes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:chipSpacingHorizontal="50dp"
+                app:chipSpacingVertical="30dp">
+            </com.google.android.material.chip.ChipGroup>
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
