--- a/Fragments/app/src/main/res/layout/fragment_mis_publicaciones.xml
+++ b/Fragments/app/src/main/res/layout/fragment_mis_publicaciones.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileFragments.misPublicaciones">
+    tools:context=".Fragments.ProfileFragment.misPublicaciones">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
