--- a/Fragments/app/src/main/res/layout/fragment_tendencias.xml
+++ b/Fragments/app/src/main/res/layout/fragment_tendencias.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragments.Tendencias">
+    tools:context=".Fragments.HomeFragment.Tendencias">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/tendenciasRecyclerView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-        android:text="TENDENCIIAAS" />
+</androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
