(fixes) some fragments bugs fixed

--- a/Fragments/app/src/main/res/layout/activity_main.xml
+++ b/Fragments/app/src/main/res/layout/activity_main.xml
@@ -48,8 +48,8 @@
     <FrameLayout
         android:id="@+id/frameLayoutMain"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/MainFragmentManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
