--- a/Fragments/app/src/main/res/layout/fragment_mis_temas.xml
+++ b/Fragments/app/src/main/res/layout/fragment_mis_temas.xml
@@ -5,11 +5,20 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.HomeFragment.MisTemas">
 
+
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/MisTemasRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </androidx.recyclerview.widget.RecyclerView>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="visible"
+        />
 
 </FrameLayout>
