--- a/Fragments/app/src/main/res/layout/fragment_profile.xml
+++ b/Fragments/app/src/main/res/layout/fragment_profile.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:backgroundTint="@color/md_theme_light_tertiaryContainer"
+        android:backgroundTint="@color/seed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline2"
@@ -93,12 +93,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
-    <ImageView
-        android:id="@+id/imgForoex"
+    <TextView
+        android:id="@+id/publishTextLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/ic_nombre_app"
+        android:fontFamily="@font/caviardreams"
+        android:text="@string/app_name"
+        android:textColor="#006A64"
+        android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -120,6 +123,7 @@
         android:layout_height="0dp"
         android:layout_margin="20dp"
         android:hint="Descripcion"
+        android:background="@null"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
